Prueba de conexion y despliegue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=MaderaWeb
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/maderaweb
+spring.datasource.username=postgres
+spring.datasource.password=1927
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Swagger
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
