Modulo Auth registro, login y JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.show-sql=true
 # Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# JWT Config
+jwt.secret=QW1lcmljYVlPbmVQaWVjZVNvbkxvTWVqb3JMb3NBbW8=
+jwt.expiration=3600000 
+#1 hora
